# VoiceLab-Studio

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202606240001_initial_schema.py
app/: __init__.py
app/api/: dependencies.py  main.py
app/api/routers/: models.py  tasks.py
app/bot/: api_client.py  handlers.py  keyboards.py  main.py
app/core/: config.py
app/db/: enums.py  models.py  session.py
app/gemini/: __init__.py  jobs.py  smoke.py  transcription.py
app/media/: ffmpeg.py  smoke.py
app/rvc/: __init__.py  inference.py  jobs.py  registry.py  smoke.py
app/storage/: __init__.py  paths.py
app/tasks/: __init__.py  jobs.py  progress.py
app/workers/: enqueue_fake.py  gpu_check.py  jobs.py  main.py  queue.py
docker/: Dockerfile.app  Dockerfile.rvc-worker
tests/: test_api_health.py  test_db_metadata.py  test_gemini_transcription.py  test_media_command.py  test_model_registry.py  test_queue.py  test_rvc_inference.py  test_storage_paths.py  test_task_progress.py
