[project]
name = "voicelab-studio"
version = "0.1.0"
description = "Task-based Telegram voice and media processing service."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "aiogram>=3.7,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "redis>=5.0,<6.0",
    "rq>=1.16,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3,<3.0",
]

dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
voicelab-api = "app.api.main:run"
voicelab-bot = "app.bot.main:run"
voicelab-enqueue-fake = "app.workers.enqueue_fake:run"
voicelab-gemini-smoke = "app.gemini.smoke:run"
voicelab-media-smoke = "app.media.smoke:run"
voicelab-rvc-smoke = "app.rvc.smoke:run"
voicelab-worker = "app.workers.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
